<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_fons"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvLaMevaSalut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/login_title"
        android:textColor="@color/primary_variant_dark"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_logo"
        app:layout_constraintTop_toBottomOf="@+id/tvLaMevaSalut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
     />

    <EditText
        android:id="@+id/etUsuari"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:autofillHints="username"
        android:hint="@string/login_user"
        android:inputType="textEmailAddress"
        android:textSize="30sp"
        android:textColorHint="@color/secondary_variant_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <EditText
        android:id="@+id/etContrasenya"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:autofillHints="password"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textSize="30sp"
        android:textColorHint="@color/secondary_variant_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsuari" />

    <TextView
        android:id="@+id/tvSingUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/login_register"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/btnSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/login_send"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etContrasenya" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/gray100"
        >
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/ic_bars"
            android:src="@drawable/ic_bars"
            android:backgroundTint="@color/gray100"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/ic_bars"
            android:src="@drawable/ic_fire"
            android:backgroundTint="@color/gray100"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/ic_bars"
            android:src="@drawable/ic_pressure"
            android:backgroundTint="@color/gray100"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/ic_bars"
            android:src="@drawable/ic_weigth"
            android:backgroundTint="@color/gray100"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/ic_bars"
            android:src="@drawable/ic_bars"
            android:backgroundTint="@color/gray100"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/ic_bars"
            android:src="@drawable/ic_bars"
            android:backgroundTint="@color/gray100"
            />




    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>